crates/aranya-policy-compiler/tests/data/enums/identifiers_already_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: the name `Drink` is defined multiple times
  |
1 | enum Drink {
  |      ----- previous defintion here
...
5 | enum Drink {
  |      ^^^^^ re-defined here
